# rust-exercise

./: .gitconfig
activities/: Cargo.toml
activities/src/: example.txt
activities/test_data/: transactions.json
blockchain/: Cargo.toml
blockchain/src/: blockchain.rs  main.rs
chat_client/src/: main.rs
chat_server/: Cargo.toml
chat_server/src/: main.rs
cli/src/: find_and_replace.rs  main.rs
command_exec/src/: main.rs
d1_filework/: Cargo.toml
d1_filework/src/: error.rs  lib.rs  main.rs
d1_filework/test_data/: transactions.json
d2_iterators/: Cargo.toml  README.md
d2_iterators/src/: combi.rs  gen_range.rs  lib.rs  main.rs  v4_intoiter.rs
d3_lifetimes/: Cargo.toml
d3_lifetimes/src/: main.rs  v2_closure.rs  v3_rc.rs  v4_channels.rs  v5_pool.rs  v6_rayon.rs
d3_lifetimes/test_data/: v3_data.txt
d4_builder/: Cargo.toml
d4_builder/src/: card.rs  lib.rs  svg_mac.rs
d4_builder_derive/: Cargo.toml
d4_builder_derive/src/: lib.rs
demos/: Cargo.toml
demos/demo-custom-error/: Cargo.toml
demos/demo-from-into/: Cargo.toml
demos/demo-from-into/src/: 1.rs  2.rs  3.rs
demos/demo-match-guards/: Cargo.toml
demos/demo-match-guards/src/: 1.rs  2.rs  3.rs  4.rs
demos/demo-typestate/: Cargo.toml
demos/demo-typestate/src/: main.rs
demos/src/: main.rs
dsa/src/: main.rs
exercise/: .gitignore
exercise/src/: main.rs
ldaptest/: Cargo.toml
money/src/: lib.rs
packt/iterators/src/: lib.rs
packt/useful/: Cargo.toml
packt/useful/src/: lib.rs
rust-chat/: Cargo.toml
server/src/: main.rs  server.rs
server/src/http/: method.rs  mod.rs  request.rs
snake/: Cargo.toml
snake/src/: draw.rs  game.rs  main.rs
stack/src/: main.rs
