[package]
name = "activities"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "activity"
# path = "src/activitylib.rs"

[dependencies]
chrono = "0.4.31"
thiserror = "1.0.50"

[lib]
name = "mylib"
path = "src/bin/lib.rs"

[[bin]]
name = "mybin"
path = "src/bin/demo.rs"