[package]
name = "activities"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "activity"
# path = "src/activitylib.rs"

[dependencies]
chrono = "0.4.31"
thiserror = "*"
rand = "0.5.5"
serde="1.0.91"
serde_derive="1.0.91"
serde_json="1.0.39"

[lib]
name = "mylib"
path = "src/bin/lib.rs"

[[bin]]
name = "mybin"
path = "src/bin/demo.rs"
