[package]
name = "d2_iterators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "d2_iterators"
path = "src/lib.rs"

[[bin]]
name = "d2_printout"
path = "src/main.rs"

[dependencies]
itertools = "0.8.0"
