[package]
name = "demo-from-into"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"

[[bin]]
name = "1"
path = "src/1.rs"

[[bin]]
name = "2"
path = "src/2.rs"

[[bin]]
name = "3"
path = "src/3.rs"
